fix: Java 11 incompatible stream operations